[feat] Comment 부분 새로운 API 적용. 코멘트 버전 생성 및 코멘트를 받아올 때 현재 활성화된 version 전달.
